--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
 asgiref==3.2.10
 dj-database-url==0.5.0
 Django==3.0.7
+django-cors-headers==3.4.0
 django-filter==2.3.0
+django-heroku==0.3.1
 djangorestframework==3.11.0
 gunicorn==20.0.4
 Markdown==3.2.2
 pip-autoremove==0.9.1
+psycopg2==2.8.4
 psycopg2-binary==2.8.5
 python-decouple==3.3
 pytz==2020.1
 sqlparse==0.3.1
 whitenoise==5.1.0
-psycopg2==2.8.5
-django-heroku==0.3.1
-
