--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.10
 dj-database-url==0.5.0
 Django==3.0.7
 django-cors-headers==3.4.0
+django-extensions==3.0.3
 django-filter==2.3.0
 django-heroku==0.3.1
 djangorestframework==3.11.0
@@ -12,5 +13,6 @@ psycopg2==2.8.4
 psycopg2-binary==2.8.5
 python-decouple==3.3
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
 whitenoise==5.1.0
