--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,20 @@
-asgiref==3.2.10
+asgiref==3.3.1
+astroid==2.4.2
 dj-database-url==0.5.0
-Django==3.0.7
-django-cors-headers==3.4.0
-django-extensions==3.0.3
-django-filter==2.3.0
+Django==3.1.3
+django-cors-headers==3.5.0
+django-extensions==3.0.9
 django-heroku==0.3.1
-djangorestframework==3.11.0
-gunicorn==20.0.4
-Markdown==3.2.2
-pip-autoremove==0.9.1
+djangorestframework==3.12.2
+isort==5.6.4
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 psycopg2==2.8.4
-psycopg2-binary==2.8.5
-python-decouple==3.3
-pytz==2020.1
+psycopg2-binary==2.8.6
+pylint==2.6.0
+pytz==2020.4
 six==1.15.0
-sqlparse==0.3.1
-whitenoise==5.1.0
+sqlparse==0.4.1
+toml==0.10.2
+whitenoise==5.2.0
+wrapt==1.12.1
