--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-cors-headers==3.5.0
 django-extensions==3.0.9
 django-heroku==0.3.1
 djangorestframework==3.12.2
+gunicorn==20.0.4
 isort==5.6.4
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
